tests/fixtures/valid/array_of_strings.bop
mut struct ArrayOfStrings {
    strings: string[];
}
