tests/fixtures/should_fail/invalid_syntax.bop
mut struct Nope }
    x: int32;
{
